--- a/deployment/daemonset.yaml
+++ b/deployment/daemonset.yaml
@@ -1,3 +1,11 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: antrea-capture
+  labels:
+    app: antrea-capture
+
+---
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
@@ -5,13 +13,14 @@ metadata:
   namespace: antrea-capture
 spec:
   selector:
-    matchLabels: {app: antrea-capture}
+    matchLabels:
+      app: antrea-capture
   template:
     metadata:
-      labels: {app: antrea-capture}
+      labels:
+        app: antrea-capture
     spec:
       serviceAccountName: antrea-capture
-      hostNetwork: true
       hostPID: true
       containers:
         - name: antrea-capture
@@ -19,12 +28,18 @@ spec:
           imagePullPolicy: IfNotPresent
           securityContext:
             privileged: true
-            capabilities:
-              add: [NET_RAW, NET_ADMIN]
           env:
             - name: NODE_NAME
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
+          volumeMounts:
+            - name: host-proc
+              mountPath: /host/proc
+              readOnly: true
+      volumes:
+        - name: host-proc
+          hostPath:
+            path: /proc
       tolerations:
         - operator: Exists
