--- a/deployment/daemonset.yaml
+++ b/deployment/daemonset.yaml
@@ -21,7 +21,8 @@ spec:
         app: antrea-capture
     spec:
       serviceAccountName: antrea-capture
-      hostPID: true
+      hostNetwork: true
+      dnsPolicy: ClusterFirstWithHostNet
       containers:
         - name: antrea-capture
           image: antrea-capture:latest
@@ -33,13 +34,5 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
-          volumeMounts:
-            - name: host-proc
-              mountPath: /host/proc
-              readOnly: true
-      volumes:
-        - name: host-proc
-          hostPath:
-            path: /proc
       tolerations:
         - operator: Exists
